:bug: Attempt to fix overflow issues

--- a/src/Common/Assets/Themes/index.scss
+++ b/src/Common/Assets/Themes/index.scss
@@ -8,7 +8,6 @@
 body {
   padding: 0;
   margin: 0;
-  overflow: hidden;
   box-sizing: border-box;
   // Default Display font
   font-family: "Outfit", sans-serif;
